src/objects/ACCL__Unit_of_Measure__c.object
<CustomObject>
    <description>ACSF - Unit of Measure (Logistic Unit) for products</description>
    <fields>
        <fullName>ACCL__Check_isConsumer_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>is Consumer Unit</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Check_isOrder_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>helps field for uniqueness check</description>
        <label>is Order Unit</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Check_isPrice_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>help field for uniqueness check</description>
        <label>is Price Unit</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__GTIN__c</fullName>
        <inlineHelpText>Global Trade Item Number</inlineHelpText>
        <label>GTIN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Is_Consumer_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Consumer Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Is_Order_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Unit of Measure is default order unit.</inlineHelpText>
        <label>Is Order Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Is_Price_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Unit of Measure is default price unit.</inlineHelpText>
        <label>Is Price Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Ability__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Unit of Measue is allowed for ordering.</inlineHelpText>
        <label>Order Ability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Pieces_per_Smallest_Unit__c</fullName>
        <label>Pieces per Smallest Unit</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Pieces_per_parent_unit__c</fullName>
        <label>Pieces per Parent Unit</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Product__c</fullName>
        <label>Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Units of Measure</relationshipLabel>
        <relationshipName>Units_of_Measure</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, /*IMAGE(&quot;/img/func_icons/util/lookup20.gif&quot;, &quot;View&quot;)*/&quot;View&quot;, &quot;_top&quot;)</formula>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Rounding_Rule__c</fullName>
        <label>Rounding Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nearest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UserExit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Rounding_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rounding Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Sort_Validation__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Internal field used to take care that a sort value is unique for a product. Not visible in layout. Value will be set by workflow</description>
        <label>Sort</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Sort__c</fullName>
        <label>Sort</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Unit_Type_Validation__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Internal field used to take care that a unit type value is unique for a product. Not visible in layout. Value will be set by workflow.</description>
        <label>Unit Type</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Unit_Type__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>ConsumerUnit</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SalesUnit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_LitersPerCase__c</fullName>
        <description>Custom Unit of Conversion fields</description>
        <inlineHelpText>UL Requested fields</inlineHelpText>
        <label>Liters Per Case</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_LitersPerUnit__c</fullName>
        <description>Custom Unit of Conversion fields</description>
        <label>Liters Per Unit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_LitonsPerCase__c</fullName>
        <description>Custom Unit of Conversion fields</description>
        <inlineHelpText>UL Requested fields</inlineHelpText>
        <label>Litons Per Case</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_LitonsPerUnit__c</fullName>
        <description>Custom Unit of Conversion fields</description>
        <inlineHelpText>UL Requested fields</inlineHelpText>
        <label>Litons Per Unit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_Tons_Per_Case__c</fullName>
        <description>Custom Unit of Conversion fields</description>
        <inlineHelpText>UL Requested fields</inlineHelpText>
        <label>Tons Per Case</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_Tons_Per_Unit__c</fullName>
        <description>Custom Unit of Conversion fields</description>
        <inlineHelpText>UL Requested fields</inlineHelpText>
        <label>Tons Per Unit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_UnitsPerCase__c</fullName>
        <description>Custom Unit of Conversion fields</description>
        <inlineHelpText>UL Requested fields</inlineHelpText>
        <label>Units Per Case</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Unit of Measure</label>
    <nameField>
        <displayFormat>UoM-{00000}</displayFormat>
        <label>Unit of Measure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units of Measure</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Order_Ability_depend_on_IsOrderUnit_is_c</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Is_Order_Unit__c = true  &amp;&amp;  ACCL__Order_Ability__c  &lt;&gt; true</errorConditionFormula>
        <errorDisplayField>ACCL__Order_Ability__c</errorDisplayField>
        <errorMessage>If the &quot;Is Order Unit&quot; is checked the &quot;Order Ability&quot; must be checked as well.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Rounding_Rule_Validation</fullName>
        <active>true</active>
        <description>Validation Rule for detail object &quot;Unit of Measure&quot; that the highest value of Sort (sort__c - integer field) must have in the Picklist field  Rounding_Rule__c the value=„Never“.</description>
        <errorConditionFormula>(ACCL__Product__r.ACCL__Rounding_Rule_Validation__c &lt;=  ACCL__Sort__c  ||  ISBLANK( ACCL__Product__r.ACCL__Rounding_Rule_Validation__c )  )  &amp;&amp;  NOT(ISPICKVAL(ACCL__Rounding_Rule__c, &apos;Never&apos;))</errorConditionFormula>
        <errorMessage>Unit of Measure with the highest value of Sort must have a Rounding Rule „Never“.</errorMessage>
    </validationRules>
</CustomObject>